[gd_scene load_steps=2 format=3 uid="uid://c4tm26uo30pl5"]

[ext_resource type="Script" uid="uid://cqpb3iwjo54sn" path="res://scripts/level_up_menu.gd" id="1_nt8lk"]

[node name="LevelUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt8lk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -50.5
offset_right = 37.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Option1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Option 2"

[node name="Option3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Option 3"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Option1" to="." method="on_weapon_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Option2" to="." method="on_weapon_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Option3" to="." method="on_weapon_selected"]
